scripts/nullness/nullgtn/url86119f019a_solzy_hive_parse_tgz-pJ8-org_apache_hadoop_hive_ql_parse_MainJ8.txt
../nullgtn/url86119f019a_solzy_hive_parse_tgz-pJ8-org_apache_hadoop_hive_ql_parse_MainJ8/src/org/apache/hadoop/hive/ql/parse/ASTNode.java:34: error: [initialization.fields.uninitialized] the constructor does not initialize fields: origin
    public ASTNode() {
           ^
../nullgtn/url86119f019a_solzy_hive_parse_tgz-pJ8-org_apache_hadoop_hive_ql_parse_MainJ8/src/org/apache/hadoop/hive/ql/parse/ASTNode.java:43: error: [initialization.fields.uninitialized] the constructor does not initialize fields: origin
    public ASTNode(Token t) {
           ^
../nullgtn/url86119f019a_solzy_hive_parse_tgz-pJ8-org_apache_hadoop_hive_ql_parse_MainJ8/src/org/apache/hadoop/hive/ql/parse/ASTNode.java:65: error: [return] incompatible types in return.
            return null;
                   ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull ArrayList<@Initialized @NonNull Node>
Exception in thread "main" java.lang.OutOfMemoryError: Java heap space
